Add healthcheck endpoint
